--- a/index.html
+++ b/index.html
@@ -85,6 +85,24 @@
 
     <!-- ABOUT ME -->
 
+    <!-- INTERESTED -->
+
+
+    <section class="interested">
+        <div class="container">
+            <div class="interested__menu">
+                <div class="interested__title">
+                    <h3 class="doing">Interested in doing a project together?</h3>
+                    <span></span>
+                    <a class="contact" href="#">CONTACT ME</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- INTERESTED -->
+
 </body>
 
 </html>
