--- a/index.html
+++ b/index.html
@@ -100,8 +100,31 @@
         </div>
     </section>
 
-
     <!-- INTERESTED -->
+
+    <!-- FOOTER -->
+
+    <footer id="footer">
+        <div class="container">
+            <div class="footer__menu">
+                <div class="footer__logo">
+                    <img class="footer__img" src="img/footer-logo.png" alt="">
+                    <ul class="footer__list">
+                        <li class="footer__item">HOME</li>
+                        <li class="footer__item">PORTFOLIO</li>
+                        <li>CONTACT ME</li>
+                    </ul>
+                </div>
+                <div class="footer__icons">
+                    <i class='bx bxl-github' ></i>
+                    <i class='bx bxl-twitter'></i>
+                    <i class='bx bxl-linkedin-square' ></i>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- FOOTER -->
 
 </body>
 
