--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <header id="header">
         <div class="container">
-            <div class="header__inner row middle-xs between-xs">
+            <div class="header__inner">
                 <div class="header__menu">
                     <img src="img/logo.svg" alt="">
                 </div>
